Update CV with NeurIPS papers

--- a/cv.tex
+++ b/cv.tex
@@ -152,7 +152,7 @@
     \textbf{PhD in Statistics}, \emph{Department of Statistics, Lund
       University}
 
-    Supervisor: \emph{Jonas Wallin}
+      Supervisors: \emph{Jonas Wallin (main), Małgorzata Bogdan (co-supervisor)}
     }
 
   \item[2018] {
@@ -336,7 +336,7 @@
 \subsection{Instructor}
 
 \begin{description}
-  \item[2020--2021]{
+  \item[2020--2022]{
               \textbf{Data Visualization}, \emph{Department of Statistics, Lund
                 University}
         }
