--- a/assets/publications.bib
+++ b/assets/publications.bib
@@ -1,219 +1,244 @@
-@inproceedings{larsson2018,
-  title = {A Case Study in Fitting Area-Proportional {{Euler}} Diagrams with
-           Ellipses Using {eulerr}},
-  booktitle = {Proceedings of {{International Workshop}} on {{Set Visualization}
-               } and {{Reasoning}}},
-  author = {Larsson, Johan and Gustafsson, Peter},
-  Author+an = {1=highlight},
-  year = {2018},
-  month = jun,
-  volume = {2116},
-  pages = {84--91},
-  publisher = {{CEUR Workshop Proceedings}},
-  address = {{Edinburgh, United Kingdom}},
-  copyright = {All rights reserved},
-  keywords = {published-article},
+@InProceedings{larsson2018,
+  title        = "A Case Study in Fitting Area-Proportional {{Euler}}
+                 Diagrams with Ellipses Using {eulerr}",
+  booktitle    = "Proceedings of {{International Workshop}} on {{Set
+                 Visualization} } and {{Reasoning}}",
+  author       = "Johan Larsson and Peter Gustafsson",
+  author+an    = "1=highlight",
+  year         = "2018",
+  month        = jun,
+  volume       = "2116",
+  pages        = "84--91",
+  publisher    = "{CEUR Workshop Proceedings}",
+  address      = "{Edinburgh, United Kingdom}",
+  copyright    = "All rights reserved",
+  keywords     = "published-article",
 }
 
-@thesis{larsson2018a,
-  title = {{eulerr}: Area-Proportional {{Euler}} Diagrams with Ellipses},
-  author = {Larsson, Johan},
-  Author+an = {1=highlight},
-  date = {2018},
-  institution = {{Lund University}},
-  location = {{Lund, Sweden}},
-  url = {http://lup.lub.lu.se/student-papers/record/8934042},
-  abstract = {Euler diagrams are common and intuitive visualizations for data
-              involving sets and relationships thereof. Compared to Venn diagrams
-              , Euler diagrams do not require all set relationships to be present
-              and may therefore be area-proportional also with subset or disjoint
-              relationships in the input. Most Euler diagrams use circles, but
-              circles do not always support accurate diagrams. A promising
-              alternative for Euler diagrams is ellipses, which enable accurate
-              diagrams for a wider range of set combinations. Ellipses, however,
-              have not yet been implemented for more than three sets or three-set
-              diagrams where there are disjoint or subset relationships. The aim
-              of this thesis is to present a method and software for elliptical
-              Euler diagrams for any number of sets. In this thesis, we provide
-              and outline an R-based implementation called eulerr. It fits Euler
-              diagrams using numerical optimization and exact-area algorithms
-              through two steps: first, an initial layout is formed using the
-              sets' pairwise relationships; second, this layout is finalized
-              taking all the sets' intersections into account. Finally, we
-              compare eulerr with other software implementations of Euler
-              diagrams and show that the package is overall both more consistent
-              and accurate as well as faster for up to seven sets compared to the
-              other R-packages. eulerr perfectly reproduces samples of circular
-              Euler diagrams as well as three-set diagrams with ellipses, but
-              performs suboptimally with elliptical diagrams of more than three
-              sets. eulerr also outperforms the other software tested in this
-              thesis in fitting Euler diagrams to set configurations that might
-              lack exact solutions provided that we use ellipses; eulerr's
-              circular diagrams, meanwhile, fit better on all accounts save for
-              the diagError metric in the case of three-set diagrams.},
-  editora = {Gustafsson, Peter},
-  editoratype = {collaborator},
-  pagetotal = {33},
-  type = {Bachelor thesis},
-  keywords = {thesis},
+@Thesis{larsson2018a,
+  title        = "{eulerr}: Area-Proportional {{Euler}} Diagrams with
+                 Ellipses",
+  author       = "Johan Larsson",
+  author+an    = "1=highlight",
+  date         = "2018",
+  institution  = "{Lund University}",
+  location     = "{Lund, Sweden}",
+  URL          = "http://lup.lub.lu.se/student-papers/record/8934042",
+  abstract     = "Euler diagrams are common and intuitive visualizations
+                 for data involving sets and relationships thereof.
+                 Compared to Venn diagrams , Euler diagrams do not
+                 require all set relationships to be present and may
+                 therefore be area-proportional also with subset or
+                 disjoint relationships in the input. Most Euler
+                 diagrams use circles, but circles do not always support
+                 accurate diagrams. A promising alternative for Euler
+                 diagrams is ellipses, which enable accurate diagrams
+                 for a wider range of set combinations. Ellipses,
+                 however, have not yet been implemented for more than
+                 three sets or three-set diagrams where there are
+                 disjoint or subset relationships. The aim of this
+                 thesis is to present a method and software for
+                 elliptical Euler diagrams for any number of sets. In
+                 this thesis, we provide and outline an R-based
+                 implementation called eulerr. It fits Euler diagrams
+                 using numerical optimization and exact-area algorithms
+                 through two steps: first, an initial layout is formed
+                 using the sets' pairwise relationships; second, this
+                 layout is finalized taking all the sets' intersections
+                 into account. Finally, we compare eulerr with other
+                 software implementations of Euler diagrams and show
+                 that the package is overall both more consistent and
+                 accurate as well as faster for up to seven sets
+                 compared to the other R-packages. eulerr perfectly
+                 reproduces samples of circular Euler diagrams as well
+                 as three-set diagrams with ellipses, but performs
+                 suboptimally with elliptical diagrams of more than
+                 three sets. eulerr also outperforms the other software
+                 tested in this thesis in fitting Euler diagrams to set
+                 configurations that might lack exact solutions provided
+                 that we use ellipses; eulerr's circular diagrams,
+                 meanwhile, fit better on all accounts save for the
+                 diagError metric in the case of three-set diagrams.",
+  editora      = "Gustafsson, Peter",
+  editoratype  = "collaborator",
+  pagetotal    = "33",
+  type         = "Bachelor thesis",
+  keywords     = "thesis",
 }
 
-@misc{larsson2018c,
-  title = {Polylabelr: Find the Pole of Inaccessibility (Visual Center) of a
-           Polygon},
-  author = {Larsson, Johan},
-  Author+an = {1=highlight},
-  year = {2018},
-  copyright = {All rights reserved},
-  keywords = {software},
+@Misc{larsson2018c,
+  title        = "Polylabelr: Find the Pole of Inaccessibility (Visual
+                 Center) of a Polygon",
+  author       = "Johan Larsson",
+  author+an    = "1=highlight",
+  year         = "2018",
+  copyright    = "All rights reserved",
+  keywords     = "software",
 }
 
-@inproceedings{larsson2020c,
-  title = {The Strong Screening Rule for {{SLOPE}}},
-  booktitle = {Advances in {{Neural Information Processing Systems}} 33},
-  author = {Larsson, Johan and Bogdan, Malgorzata and Wallin, Jonas},
-  editor = {Larochelle, H. and Ranzato, M. and Hadsell, R. and Balcan, M. F. and
-            Lin, H.},
-  Author+an = {1=highlight},
-  date = {2020-12-06/0012},
-  volume = {33},
-  pages = {14592--14603},
-  publisher = {{Curran Associates, Inc.}},
-  location = {{Virtual}},
-  url = {
-         https://proceedings.neurips.cc/paper/2020/file/a7d8ae4569120b5bec12e7b6e9648b86-Paper.pdf
-         },
-  abstract = {Extracting relevant features from data sets where the number of
-              observations n is much smaller then the number of predictors p is a
-              major challenge in modern statistics. Sorted L-One Penalized
-              Estimation (SLOPE)—a generalization of the lasso---is a promising
-              method within this setting. Current numerical procedures for SLOPE,
-              however, lack the efficiency that respective tools for the lasso
-              enjoy, particularly in the context of estimating a complete
-              regularization path. A key component in the efficiency of the lasso
-              is predictor screening rules: rules that allow predictors to be
-              discarded before estimating the model. This is the first paper to
-              establish such a rule for SLOPE. We develop a screening rule for
-              SLOPE by examining its subdifferential and show that this rule is a
-              generalization of the strong rule for the lasso. Our rule is
-              heuristic, which means that it may discard predictors erroneously.
-              In our paper, however, we show that such situations are rare and
-              easily safeguarded against by a simple check of the optimality
-              conditions. Our numerical experiments show that the rule performs
-              well in practice, leading to improvements by orders of magnitude
-              for data in the p {$>>$} n domain, as well as incurring no
-              additional computational overhead when n {$>$} p.},
-  eventtitle = {Neural {{Information Procession Systems}} 2020},
-  langid = {english},
-  keywords = {published-article},
-}
-% == BibLateX quality report for larsson2020c:
-% ? Unsure about the formatting of the booktitle
-
-@inproceedings{larsson2021b,
-  title = {Look-Ahead Screening Rules for the Lasso},
-  booktitle = {22nd {{European Young Statisticians Meeting}} -- {{Proceedings}}},
-  author = {Larsson, Johan},
-  Author+an = {1=highlight},
-  editor = {{Andreas Makridis} and {Fotios S. Milienos} and {Panagiotis
-            Papastamoulis} and {Christina Parpoula} and {Athanasios Rakitzis}},
-  date = {2021-09-06/2021-09-10},
-  pages = {61--65},
-  publisher = {{Panteion University of Social and Political Sciences}},
-  location = {{Athens, Greece}},
-  url = {https://www.eysm2021.panteion.gr/files/Proceedings_EYSM_2021.pdf},
-  abstract = {The lasso is a popular method to induce shrinkage and sparsity in
-              the solution vector (coefficients) of regression problems,
-              particularly when there are many predictors relative to the number
-              of observations. Solving the lasso in this high-dimensional setting
-              can, however, be computationally demanding. Fortunately, this
-              demand can be alleviated via the use of screening rules that
-              discard predictors prior to fitting the model, leading to a reduced
-              problem to be solved. In this paper, we present a new screening
-              strategy: look-ahead screening. Our method uses safe screening
-              rules to find a range of penalty values for which a given predictor
-              cannot enter the model, thereby screening predictors along the
-              remainder of the path. In experiments we show that these look-ahead
-              screening rules outperform the active warm-start version of the Gap
-              Safe rules.},
-  eventtitle = {22nd {{European Young Statisticians Meeting}}},
-  isbn = {978-960-7943-23-1},
-  langid = {english},
-  keywords = {published-article},
+@InProceedings{larsson2020c,
+  title        = "The Strong Screening Rule for {{SLOPE}}",
+  booktitle    = "Advances in {{Neural Information Processing Systems}}
+                 33",
+  author       = "Johan Larsson and Malgorzata Bogdan and Jonas Wallin",
+  editor       = "H. Larochelle and M. Ranzato and R. Hadsell and M. F.
+                 Balcan and H. Lin",
+  author+an    = "1=highlight",
+  date         = "2020-12-06/0012",
+  volume       = "33",
+  pages        = "14592--14603",
+  publisher    = "{Curran Associates, Inc.}",
+  location     = "{Virtual}",
+  URL          = "https://proceedings.neurips.cc/paper/2020/file/a7d8ae4569120b5bec12e7b6e9648b86-Paper.pdf",
+  abstract     = "Extracting relevant features from data sets where the
+                 number of observations n is much smaller then the
+                 number of predictors p is a major challenge in modern
+                 statistics. Sorted L-One Penalized Estimation
+                 (SLOPE)—a generalization of the lasso---is a
+                 promising method within this setting. Current numerical
+                 procedures for SLOPE, however, lack the efficiency that
+                 respective tools for the lasso enjoy, particularly in
+                 the context of estimating a complete regularization
+                 path. A key component in the efficiency of the lasso is
+                 predictor screening rules: rules that allow predictors
+                 to be discarded before estimating the model. This is
+                 the first paper to establish such a rule for SLOPE. We
+                 develop a screening rule for SLOPE by examining its
+                 subdifferential and show that this rule is a
+                 generalization of the strong rule for the lasso. Our
+                 rule is heuristic, which means that it may discard
+                 predictors erroneously. In our paper, however, we show
+                 that such situations are rare and easily safeguarded
+                 against by a simple check of the optimality conditions.
+                 Our numerical experiments show that the rule performs
+                 well in practice, leading to improvements by orders of
+                 magnitude for data in the p {$>>$} n domain, as well as
+                 incurring no additional computational overhead when n
+                 {$>$} p.",
+  eventtitle   = "Neural {{Information Procession Systems}} 2020",
+  langid       = "english",
+  keywords     = "published-article",
 }
 
-@inproceedings{moreau2022a,
-  title = {Benchopt: Reproducible, Efficient and Collaborative Optimization
-           Benchmarks},
-  shorttitle = {Benchopt},
-  booktitle = {Advances in {{Neural Information Processing Systems}} 35},
-  author = {Moreau, Thomas and Massias, Mathurin and Gramfort, Alexandre and
-            Ablin, Pierre and Bannier, Pierre-Antoine and Charlier, Benjamin and
-            Dagréou, Mathieu and family=Tour, given=Tom Dupré, prefix=la,
-            useprefix=true and Durif, Ghislain and Dantas, Cassio F. and
-            Klopfenstein, Quentin and Larsson, Johan and Lai, En and Lefort,
-            Tanguy and Malézieux, Benoit and Moufad, Badr and Nguyen, Binh T. and
-            Rakotomamonjy, Alain and Ramzi, Zaccharie and Salmon, Joseph and
-            Vaiter, Samuel},
-  author+an = {10=highlight},
-  date = {2022-11-29},
-  volume = {35},
-  pages = {forthcoming},
-  publisher = {{Curran Associates, Inc.}},
-  location = {{New Orleans, USA}},
-  abstract = {Numerical validation is at the core of machine learning research
-              as it allows to assess the actual impact of new methods, and to
-              confirm the agreement between theory and practice. Yet, the rapid
-              development of the field poses several challenges: researchers are
-              confronted with a profusion of methods to compare, limited
-              transparency and consensus on best practices, as well as tedious
-              re-implementation work. As a result, validation is often very
-              partial, which can lead to wrong conclusions that slow down the
-              progress of research. We propose Benchopt, a collaborative
-              framework to automate, reproduce and publish optimization
-              benchmarks in machine learning across programming languages and
-              hardware architectures. Benchopt simplifies benchmarking for the
-              community by providing an off-the-shelf tool for running, sharing
-              and extending experiments. To demonstrate its broad usability, we
-              showcase benchmarks on three standard learning tasks: \$
-              \textbackslash ell\_2\$-regularized logistic regression, Lasso, and
-              ResNet18 training for image classification. These benchmarks
-              highlight key practical findings that give a more nuanced view of
-              the state-of-the-art for these problems, showing that for practical
-              evaluation, the devil is in the details. We hope that Benchopt will
-              foster collaborative work in the community hence improving the
-              reproducibility of research findings.},
-  eventtitle = {Neural {{Information Procession Systems}} 2022},
-  keywords = {published-article},
+@InProceedings{larsson2021b,
+  title        = "Look-Ahead Screening Rules for the Lasso",
+  booktitle    = "22nd {{European Young Statisticians Meeting}} --
+                 {{Proceedings}}",
+  author       = "Johan Larsson",
+  author+an    = "1=highlight",
+  editor       = "{Andreas Makridis} and {Fotios S. Milienos} and
+                 {Panagiotis Papastamoulis} and {Christina Parpoula} and
+                 {Athanasios Rakitzis}",
+  date         = "2021-09-06/2021-09-10",
+  pages        = "61--65",
+  publisher    = "{Panteion University of Social and Political
+                 Sciences}",
+  location     = "{Athens, Greece}",
+  URL          = "https://www.eysm2021.panteion.gr/files/Proceedings_EYSM_2021.pdf",
+  abstract     = "The lasso is a popular method to induce shrinkage and
+                 sparsity in the solution vector (coefficients) of
+                 regression problems, particularly when there are many
+                 predictors relative to the number of observations.
+                 Solving the lasso in this high-dimensional setting can,
+                 however, be computationally demanding. Fortunately,
+                 this demand can be alleviated via the use of screening
+                 rules that discard predictors prior to fitting the
+                 model, leading to a reduced problem to be solved. In
+                 this paper, we present a new screening strategy:
+                 look-ahead screening. Our method uses safe screening
+                 rules to find a range of penalty values for which a
+                 given predictor cannot enter the model, thereby
+                 screening predictors along the remainder of the path.
+                 In experiments we show that these look-ahead screening
+                 rules outperform the active warm-start version of the
+                 Gap Safe rules.",
+  eventtitle   = "22nd {{European Young Statisticians Meeting}}",
+  ISBN         = "978-960-794-3-23-1",
+  langid       = "english",
+  keywords     = "published-article",
 }
 
-
-@inproceedings{larsson2022b,
-  title = {The {{Hessian}} Screening Rule},
-  booktitle = {Advances in {{Neural Information Processing Systems}} 35},
-  author = {Larsson, Johan and Wallin, Jonas},
-  author+an = {1=highlight},
-  date = {2022-11-29},
-  volume = {35},
-  pages = {forthcoming},
-  publisher = {{Curran Associates, Inc.}},
-  location = {{New Orleans, USA}},
-  abstract = {Predictor screening rules, which discard predictors from the
-              design matrix before fitting a model, have had considerable impact
-              on the speed with which l1-regularized regression problems, such as
-              the lasso, can be solved. Current state-of-the-art screening rules,
-              however, have difficulties in dealing with highly-correlated
-              predictors, often becoming too conservative. In this paper, we
-              present a new screening rule to deal with this issue: the Hessian
-              Screening Rule. The rule uses second-order information from the
-              model to provide more accurate screening as well as higher-quality
-              warm starts. The proposed rule outperforms all studied alternatives
-              on data sets with high correlation for both l1-regularized
-              least-squares (the lasso) and logistic regression. It also performs
-              best overall on the real data sets that we examine.},
-  eventtitle = {Neural {{Information Procession Systems}} 2022},
-  langid = {english},
-  keywords = {published-article},
+@InProceedings{moreau2022a,
+  title        = "Benchopt: Reproducible, Efficient and Collaborative
+                 Optimization Benchmarks",
+  shorttitle   = "Benchopt",
+  booktitle    = "Advances in {{Neural Information Processing Systems}}
+                 35",
+  author       = "Thomas Moreau and Mathurin Massias and Alexandre
+                 Gramfort and Pierre Ablin and Pierre-Antoine Bannier
+                 and Benjamin Charlier and Mathieu Dagréou and
+                 useprefix=false {family=Tour, given=Tom Dupré,
+                 prefix=la} and Ghislain Durif and Cassio F. Dantas and
+                 Quentin Klopfenstein and Johan Larsson and En Lai and
+                 Tanguy Lefort and Benoit Malézieux and Badr Moufad and
+                 Binh T. Nguyen and Alain Rakotomamonjy and Zaccharie
+                 Ramzi and Joseph Salmon and Samuel Vaiter",
+  author+an    = "10=highlight",
+  date         = "2022-12-06",
+  volume       = "35",
+  pages        = "25404--25421",
+  publisher    = "{Curran Associates, Inc.}",
+  location     = "{New Orleans, USA}",
+  URL          = "https://proceedings.neurips.cc/paper_files/paper/2022/hash/a30769d9b62c9b94b72e21e0ca73f338-Abstract-Conference.html",
+  abstract     = "Numerical validation is at the core of machine
+                 learning research as it allows to assess the actual
+                 impact of new methods, and to confirm the agreement
+                 between theory and practice. Yet, the rapid development
+                 of the field poses several challenges: researchers are
+                 confronted with a profusion of methods to compare,
+                 limited transparency and consensus on best practices,
+                 as well as tedious re-implementation work. As a result,
+                 validation is often very partial, which can lead to
+                 wrong conclusions that slow down the progress of
+                 research. We propose Benchopt, a collaborative
+                 framework to automate, reproduce and publish
+                 optimization benchmarks in machine learning across
+                 programming languages and hardware architectures.
+                 Benchopt simplifies benchmarking for the community by
+                 providing an off-the-shelf tool for running, sharing
+                 and extending experiments. To demonstrate its broad
+                 usability, we showcase benchmarks on three standard
+                 learning tasks: \$\textbackslash ell\_2\$-regularized
+                 logistic regression, Lasso, and ResNet18 training for
+                 image classification. These benchmarks highlight key
+                 practical findings that give a more nuanced view of the
+                 state-of-the-art for these problems, showing that for
+                 practical evaluation, the devil is in the details. We
+                 hope that Benchopt will foster collaborative work in
+                 the community hence improving the reproducibility of
+                 research findings.",
+  eventtitle   = "Neural {{Information Procession Systems}} 2022",
+  keywords     = "published-article",
 }
 
-
+@InProceedings{larsson2022b,
+  title        = "The {{Hessian}} Screening Rule",
+  booktitle    = "Advances in {{Neural Information Processing Systems}}
+                 35",
+  author       = "Johan Larsson and Jonas Wallin",
+  author+an    = "1=highlight",
+  date         = "2022-11-29",
+  volume       = "35",
+  pages        = "15823--15835",
+  publisher    = "{Curran Associates, Inc.}",
+  location     = "{New Orleans, USA}",
+  abstract     = "Predictor screening rules, which discard predictors
+                 from the design matrix before fitting a model, have had
+                 considerable impact on the speed with which
+                 l1-regularized regression problems, such as the lasso,
+                 can be solved. Current state-of-the-art screening
+                 rules, however, have difficulties in dealing with
+                 highly-correlated predictors, often becoming too
+                 conservative. In this paper, we present a new screening
+                 rule to deal with this issue: the Hessian Screening
+                 Rule. The rule uses second-order information from the
+                 model to provide more accurate screening as well as
+                 higher-quality warm starts. The proposed rule
+                 outperforms all studied alternatives on data sets with
+                 high correlation for both l1-regularized least-squares
+                 (the lasso) and logistic regression. It also performs
+                 best overall on the real data sets that we examine.",
+  eventtitle   = "Neural {{Information Procession Systems}} 2022",
+  langid       = "english",
+  keywords     = "published-article",
+}
