--- a/cv.tex
+++ b/cv.tex
@@ -44,7 +44,8 @@
   backend      = biber,
   sorting      = ydnt,
   style        = ieee,
-  defernumbers = true
+  defernumbers = true,
+  maxbibnames  = 99
 ]{biblatex}
 \addbibresource{assets/publications.bib}
 
