--- a/assets/publications.bib
+++ b/assets/publications.bib
@@ -143,6 +143,7 @@
   shorttitle = {Benchopt},
   booktitle = {Advances in {{Neural Information Processing Systems}} 35},
   author = {Moreau, Thomas and Massias, Mathurin and Gramfort, Alexandre and Ablin, Pierre and Bannier, Pierre-Antoine and Charlier, Benjamin and Dagréou, Mathieu and family=Tour, given=Tom Dupré, prefix=la, useprefix=false and Durif, Ghislain and Dantas, Cassio F. and Klopfenstein, Quentin and Larsson, Johan and Lai, En and Lefort, Tanguy and Malézieux, Benoit and Moufad, Badr and Nguyen, Binh T. and Rakotomamonjy, Alain and Ramzi, Zaccharie and Salmon, Joseph and Vaiter, Samuel},
+  editor = {{S. Koyejo} and {S. Mohamed} and {A. Agarwal} and {D. Belgrave} and {K. Cho} and {A. Oh}},
   author+an = {12=highlight},
   date = {2022-12-06},
   volume = {35},
@@ -159,27 +160,16 @@
   title = {The {{Hessian}} Screening Rule},
   booktitle = {Advances in {{Neural Information Processing Systems}} 35},
   author = {Larsson, Johan and Wallin, Jonas},
+  editor = {{S. Koyejo} and {S. Mohamed} and {A. Agarwal} and {K. Cho} and {A. Oh}},
   author+an = {1=highlight},
   date = {2022-12-06},
   volume = {35},
-  pages = {15823-15835},
+  pages = {15823--15835},
   publisher = {{Curran Associates, Inc.}},
   location = {{New Orleans, USA}},
-  abstract = {Predictor screening rules, which discard predictors from the
-              design matrix before fitting a model, have had considerable impact
-              on the speed with which l1-regularized regression problems, such as
-              the lasso, can be solved. Current state-of-the-art screening rules,
-              however, have difficulties in dealing with highly-correlated
-              predictors, often becoming too conservative. In this paper, we
-              present a new screening rule to deal with this issue: the Hessian
-              Screening Rule. The rule uses second-order information from the
-              model to provide more accurate screening as well as higher-quality
-              warm starts. The proposed rule outperforms all studied alternatives
-              on data sets with high correlation for both l1-regularized
-              least-squares (the lasso) and logistic regression. It also performs
-              best overall on the real data sets that we examine.},
-  eventtitle = {Neural {{Information Procession Systems}} 2022},
   url = {https://papers.nips.cc/paper_files/paper/2022/hash/65a925049647eab0aa06a9faf1cd470b-Abstract-Conference.html},
+  abstract = {Predictor screening rules, which discard predictors from the design matrix before fitting a model, have had considerable impact on the speed with which l1-regularized regression problems, such as the lasso, can be solved. Current state-of-the-art screening rules, however, have difficulties in dealing with highly-correlated predictors, often becoming too conservative. In this paper, we present a new screening rule to deal with this issue: the Hessian Screening Rule. The rule uses second-order information from the model to provide more accurate screening as well as higher-quality warm starts. The proposed rule outperforms all studied alternatives on data sets with high correlation for both l1-regularized least-squares (the lasso) and logistic regression. It also performs best overall on the real data sets that we examine.},
+  eventtitle = {Neural {{Information Procession Systems}} 2022},
   langid = {english},
   keywords = {published-article}
 }
