--- a/publications.bib
+++ b/publications.bib
@@ -3,30 +3,30 @@
     A Case Study in Fitting Area-Proportional {{Euler}} Diagrams with Ellipses Using
     {eulerr}
   },
+  author        = {Larsson, Johan and Gustafsson, Peter},
+  year          = {2018},
+  month         = jun,
   booktitle     = {
     Proceedings of {{International Workshop}} on {{Set Visualization} } and
     {{Reasoning}}
   },
-  author        = {Larsson, Johan and Gustafsson, Peter},
-  author+an     = {1=highlight},
-  year          = {2018},
-  month         = jun,
-  volume        = {2116},
-  pages         = {84--91},
   publisher     = {{CEUR Workshop Proceedings}},
   address       = {{Edinburgh, United Kingdom}},
+  volume        = {2116},
+  pages         = {84--91},
   copyright     = {All rights reserved},
+  author+an     = {1=highlight},
   keywords      = {published-article}
 }
 
 @thesis{larsson2018a,
   title         = {{eulerr}: Area-Proportional {{Euler}} Diagrams with Ellipses},
   author        = {Larsson, Johan},
+  location      = {{Lund, Sweden}},
+  url           = {http://lup.lub.lu.se/student-papers/record/8934042},
   author+an     = {1=highlight},
   date          = {2018},
   institution   = {{Lund University}},
-  location      = {{Lund, Sweden}},
-  url           = {http://lup.lub.lu.se/student-papers/record/8934042},
   abstract      = {
     Euler diagrams are common and intuitive visualizations for data involving sets and
     relationships thereof. Compared to Venn diagrams , Euler diagrams do not require
@@ -62,27 +62,27 @@
 @misc{larsson2018c,
   title         = {Polylabelr: Find the Pole of Inaccessibility (Visual Center) of a Polygon},
   author        = {Larsson, Johan},
-  author+an     = {1=highlight},
   year          = {2018},
   copyright     = {All rights reserved},
+  author+an     = {1=highlight},
   keywords      = {software}
 }
 
 @inproceedings{larsson2020c,
   title         = {The Strong Screening Rule for {{SLOPE}}},
-  booktitle     = {Advances in {{Neural Information Processing Systems}} 33},
   author        = {Larsson, Johan and Bogdan, Malgorzata and Wallin, Jonas},
-  editor        = {Larochelle, H. and Ranzato, M. and Hadsell, R. and Balcan, M. F. and Lin, H.},
-  author+an     = {1=highlight},
-  date          = {2020-12-06/0012},
+  booktitle     = {Advances in {{Neural Information Processing Systems}} 33},
+  location      = {{Virtual}},
+  publisher     = {{Curran Associates, Inc.}},
   volume        = {33},
   pages         = {14592--14603},
-  publisher     = {{Curran Associates, Inc.}},
-  location      = {{Virtual}},
   url           = {
     https://papers.nips.cc/paper\_files
     /paper/2020/hash/a7d8ae4569120b5bec12e7b6e9648b86-Abstract.html
   },
+  editor        = {Larochelle, H. and Ranzato, M. and Hadsell, R. and Balcan, M. F. and Lin, H.},
+  author+an     = {1=highlight},
+  date          = {2020-12-06/0012},
   abstract      = {
     Extracting relevant features from data sets where the number of observations n is
     much smaller then the number of predictors p is a major challenge in modern
@@ -108,18 +108,19 @@
 
 @inproceedings{larsson2021b,
   title         = {Look-Ahead Screening Rules for the Lasso},
-  booktitle     = {22nd {{European Young Statisticians Meeting}} -- {{Proceedings}}},
   author        = {Larsson, Johan},
+  booktitle     = {22nd {{European Young Statisticians Meeting}} -- {{Proceedings}}},
+  location      = {{Athens, Greece}},
+  publisher     = {{Panteion University of Social and Political Sciences}},
+  pages         = {61--65},
+  isbn          = {978-960-7943-23-1},
+  url           = {https://www.eysm2021.panteion.gr/files/Proceedings\_EYSM\_2021.pdf},
   author+an     = {1=highlight},
   editor        = {
     {Andreas Makridis} and {Fotios S. Milienos} and {Panagiotis Papastamoulis} and
     {Christina Parpoula} and {Athanasios Rakitzis}
   },
   date          = {2021-09-06/2021-09-10},
-  pages         = {61--65},
-  publisher     = {{Panteion University of Social and Political Sciences}},
-  location      = {{Athens, Greece}},
-  url           = {https://www.eysm2021.panteion.gr/files/Proceedings\_EYSM\_2021.pdf},
   abstract      = {
     The lasso is a popular method to induce shrinkage and sparsity in the solution
     vector (coefficients) of regression problems, particularly when there are many
@@ -134,7 +135,6 @@
     outperform the active warm-start version of the Gap Safe rules.
   },
   eventtitle    = {22nd {{European Young Statisticians Meeting}}},
-  isbn          = {978-960-7943-23-1},
   langid        = {english},
   keywords      = {published-article}
 }
@@ -142,7 +142,6 @@
 @inproceedings{moreau2022a,
   title         = {Benchopt: Reproducible, Efficient and Collaborative Optimization Benchmarks},
   shorttitle    = {Benchopt},
-  booktitle     = {Advances in {{Neural Information Processing Systems}} 35},
   author        = {
     Moreau, Thomas and Massias, Mathurin and Gramfort, Alexandre and Ablin, Pierre and
     Bannier, Pierre-Antoine and Charlier, Benjamin and Dagr\'{e}ou, Mathieu and
@@ -151,20 +150,18 @@
     Lefort, Tanguy and Mal\'{e}zieux, Benoit and Moufad, Badr and Nguyen, Binh T. and
     Rakotomamonjy, Alain and Ramzi, Zaccharie and Salmon, Joseph and Vaiter, Samuel
   },
-  editor        = {
-    {S. Koyejo} and {S. Mohamed} and {A. Agarwal} and {D. Belgrave} and {K. Cho} and
-    {A. Oh}
-  },
-  author+an     = {12=highlight},
-  date          = {2022-12-06},
+  booktitle     = {Advances in {{Neural Information Processing Systems}} 35},
+  location      = {{New Orleans, USA}},
+  publisher     = {{Curran Associates, Inc.}},
   volume        = {35},
   pages         = {25404--25421},
-  publisher     = {{Curran Associates, Inc.}},
-  location      = {{New Orleans, USA}},
+  isbn          = {978-1-71387-108-8},
   url           = {
-    https://proceedings.neurips.cc/paper\_files
-    /paper/2022/hash/a30769d9b62c9b94b72e21e0ca73f338-Abstract-Conference.html
+    https://proceedings.neurips.cc/paper\_files/paper/2022/hash/a30769d9b62c9b94b72e21e0ca73f338-Abstract-Conference.html
   },
+  author+an     = {12=highlight},
+  editor        = {Koyejo, S. and Mohamed, S. and Agarwal, A. and Belgrave, D. and Cho, K. and Oh, A.},
+  date          = {2022-11-28/2022-12-09},
   abstract      = {
     Numerical validation is at the core of machine learning research as it allows to
     assess the actual impact of new methods, and to confirm the agreement between
@@ -177,33 +174,35 @@
     benchmarks in machine learning across programming languages and hardware
     architectures. Benchopt simplifies benchmarking for the community by providing an
     off-the-shelf tool for running, sharing and extending experiments. To demonstrate
-    its broad usability, we showcase benchmarks on three standard learning tasks: \$
-    \textbackslash ell\_2\$-regularized logistic regression, Lasso, and ResNet18
+    its broad usability, we showcase benchmarks on three standard learning tasks:
+    \$\textbackslash ell\_2\$-regularized logistic regression, Lasso, and ResNet18
     training for image classification. These benchmarks highlight key practical
     findings that give a more nuanced view of the state-of-the-art for these problems,
     showing that for practical evaluation, the devil is in the details. We hope that
     Benchopt will foster collaborative work in the community hence improving the
     reproducibility of research findings.
   },
-  eventtitle    = {Neural {{Information Procession Systems}} 2022},
+  eventtitle    = {
+    36th {{Conference}} on {{Neural Information Processing Systems}} ({{NeurIPS}} 2022)
+  },
   keywords      = {published-article}
 }
 
 @inproceedings{larsson2022b,
   title         = {The {{Hessian}} Screening Rule},
-  booktitle     = {Advances in {{Neural Information Processing Systems}} 35},
   author        = {Larsson, Johan and Wallin, Jonas},
-  editor        = {{S. Koyejo} and {S. Mohamed} and {A. Agarwal} and {K. Cho} and {A. Oh}},
-  author+an     = {1=highlight},
-  date          = {2022-12-06},
+  booktitle     = {Advances in {{Neural Information Processing Systems}} 35},
+  location      = {{New Orleans, USA}},
+  publisher     = {{Curran Associates, Inc.}},
   volume        = {35},
   pages         = {15823--15835},
-  publisher     = {{Curran Associates, Inc.}},
-  location      = {{New Orleans, USA}},
+  isbn          = {978-1-71387-108-8},
   url           = {
-    https://papers.nips.cc/paper\_files
-    /paper/2022/hash/65a925049647eab0aa06a9faf1cd470b-Abstract-Conference.html
+    https://papers.nips.cc/paper\_files/paper/2022/hash/65a925049647eab0aa06a9faf1cd470b-Abstract-Conference.html
   },
+  author+an     = {1=highlight},
+  editor        = {Koyejo, S. and Mohamed, S. and Agarwal, A. and Belgrave, D. and Cho, K. and Oh, A.},
+  date          = {2022-11-28/2022-12-09},
   abstract      = {
     Predictor screening rules, which discard predictors from the design matrix before
     fitting a model, have had considerable impact on the speed with which
@@ -217,7 +216,47 @@
     least-squares (the lasso) and logistic regression. It also performs best overall on
     the real data sets that we examine.
   },
-  eventtitle    = {Neural {{Information Procession Systems}} 2022},
+  eventtitle    = {
+    36th {{Conference}} on {{Neural Information Processing Systems}} ({{NeurIPS}} 2022)
+  },
   langid        = {english},
+  keywords      = {published-article}
+}
+
+@inproceedings{larsson2023,
+  title         = {Coordinate Descent for {{SLOPE}}},
+  author        = {Larsson, Johan and Klopfenstein, Quentin and Massias, Mathurin and Wallin, Jonas},
+  booktitle     = {
+    Proceedings of the 26th International Conference on Artificial Intelligence and
+    Statistics
+  },
+  location      = {{Valencia, Spain}},
+  publisher     = {{PMLR}},
+  series        = {Proceedings of Machine Learning Research},
+  volume        = {206},
+  pages         = {4802--4821},
+  url           = {https://proceedings.mlr.press/v206/larsson23a.html},
+  author+an     = {1=highlight},
+  editor        = {
+    Ruiz, Francisco and Dy, Jennifer and family=Meent, given=Jan-Willem, prefix=van de,
+    useprefix=true
+  },
+  date          = {2023-04-25/2023-04-27},
+  abstract      = {
+    The lasso is the most famous sparse regression and feature selection method. One
+    reason for its popularity is the speed at which the underlying optimization problem
+    can be solved. Sorted L-One Penalized Estimation (SLOPE) is a generalization of the
+    lasso with appealing statistical properties. In spite of this, the method has not
+    yet reached widespread interest. A major reason for this is that current software
+    packages that fit SLOPE rely on algorithms that perform poorly in high dimensions.
+    To tackle this issue, we propose a new fast algorithm to solve the SLOPE
+    optimization problem, which combines proximal gradient descent and proximal
+    coordinate descent steps. We provide new results on the directional derivative of
+    the SLOPE penalty and its related SLOPE thresholding operator, as well as provide
+    convergence guarantees for our proposed solver. In extensive benchmarks on
+    simulated and real data, we demonstrate our method's performance against a long
+    list of competing algorithms.
+  },
+  eventtitle    = {{{AISTATS}} 2023},
   keywords      = {published-article}
 }
