fix: add csquotes package

--- a/cv.tex
+++ b/cv.tex
@@ -20,6 +20,7 @@
 \setdefaultlanguage[variant=american]{english}
 
 \usepackage{textcomp}
+\usepackage{csquotes}
 \usepackage{microtype}
 \UseMicrotypeSet[protrusion]{basicmath}
 
