--- a/publications.bib
+++ b/publications.bib
@@ -85,7 +85,7 @@
     Larochelle, Hugo and Ranzato, Marc'Aurelio and Hadsell, Raia and Balcan,
     Maria-Florina and Lin, Hsuan-Tien
   },
-  date          = {2020-12-06/0012},
+  date          = {2020-12-06/2020-12-12},
   abstract      = {
     Extracting relevant features from data sets where the number of observations n is
     much smaller then the number of predictors p is a major challenge in modern
