fix: fix url links

--- a/publications.bib
+++ b/publications.bib
@@ -78,7 +78,7 @@
   pages         = {14592--14603},
   isbn          = {978-1-71382-954-6},
   url           = {
-    https://papers.nips.cc/paper\_files/paper/2020/hash/a7d8ae4569120b5bec12e7b6e9648b86-Abstract.html
+    https://papers.nips.cc/paper_files/paper/2020/hash/a7d8ae4569120b5bec12e7b6e9648b86-Abstract.html
   },
   author+an     = {1=highlight},
   editor        = {
@@ -112,8 +112,6 @@
   keywords      = {published-article}
 }
 
-% == BibLateX quality report for larsson2020b:
-% ? Unsure about the formatting of the booktitle
 @inproceedings{larsson2021b,
   title         = {Look-Ahead Screening Rules for the Lasso},
   author        = {Larsson, Johan},
@@ -122,7 +120,7 @@
   publisher     = {{Panteion University of Social and Political Sciences}},
   pages         = {61--65},
   isbn          = {978-960-7943-23-1},
-  url           = {https://www.eysm2021.panteion.gr/files/Proceedings\_EYSM\_2021.pdf},
+  url           = {https://www.eysm2021.panteion.gr/files/Proceedings_EYSM_2021.pdf},
   author+an     = {1=highlight},
   editor        = {
     {Andreas Makridis} and {Fotios S. Milienos} and {Panagiotis Papastamoulis} and
@@ -165,7 +163,7 @@
   pages         = {25404--25421},
   isbn          = {978-1-71387-108-8},
   url           = {
-    https://proceedings.neurips.cc/paper\_files/paper/2022/hash/a30769d9b62c9b94b72e21e0ca73f338-Abstract-Conference.html
+    https://proceedings.neurips.cc/paper_files/paper/2022/hash/a30769d9b62c9b94b72e21e0ca73f338-Abstract-Conference.html
   },
   author+an     = {12=highlight},
   editor        = {Koyejo, S. and Mohamed, S. and Agarwal, A. and Belgrave, D. and Cho, K. and Oh, A.},
@@ -206,7 +204,7 @@
   pages         = {15823--15835},
   isbn          = {978-1-71387-108-8},
   url           = {
-    https://papers.nips.cc/paper\_files/paper/2022/hash/65a925049647eab0aa06a9faf1cd470b-Abstract-Conference.html
+    https://papers.nips.cc/paper_files/paper/2022/hash/65a925049647eab0aa06a9faf1cd470b-Abstract-Conference.html
   },
   author+an     = {1=highlight},
   editor        = {Koyejo, S. and Mohamed, S. and Agarwal, A. and Belgrave, D. and Cho, K. and Oh, A.},
