feat: reduce labelwidth slightly

--- a/cv.tex
+++ b/cv.tex
@@ -406,8 +406,8 @@
 \section{Software}
 
 \begin{description}[
-    labelwidth = \widthof{qualpalr} + 1em,
-    leftmargin = \widthof{qualpalr} + 1em,
+    labelwidth = \widthof{qualpalr} + 1ex,
+    leftmargin = \widthof{qualpalr} + 1ex,
   ]
   \item[SLOPE] {
     \textbf{Generalized linear models penalized with the sorted L1 norm}
@@ -437,9 +437,10 @@
 \end{description}
 
 \section{Scholarships}
+
 \begin{description}[
-    labelwidth = \widthof{2018} + 1em,
-    leftmargin = \widthof{2018} + 1em,
+    labelwidth = \widthof{2018} + 1ex,
+    leftmargin = \widthof{2018} + 1ex,
   ]
 
   \item[2018]{
@@ -452,8 +453,8 @@
 \section{Contracted Work}
 
 \begin{description}[
-    labelwidth = \widthof{2021} + 1em,
-    leftmargin = \widthof{2021} + 1em,
+    labelwidth = \widthof{2021} + 1ex,
+    leftmargin = \widthof{2021} + 1ex,
   ]
 
   \item[2021]{
